atualizacao dos arquivos server/connections/env

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MYSQL_HOST=agronegocioserver.database.windows.net
 MYSQL_USER=agronegocio
 MYSQL_PASSWORD=Agro2023!
 MYSQL_DB=agronegocioBD 
-PORT=1433
+MYSQL_PORT=1433
