atualização do codigo mysql e conexao

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-MYSQL_HOST=agronegocioserver.database.windows.net
+MYSQL_HOST=agronegocio-bd.mysql.database.azure.com
 MYSQL_USER=agronegocio
-MYSQL_PASSWORD=Agro2023!
-MYSQL_DB=agronegocioBD 
-MYSQL_PORT=1433
+MYSQL_PASSWORD=Etapa5Puc
+MYSQL_DB=agronegociobd 
